syntax = "proto3";
package com.innocache.grpc;

// Request payload
message HelloRequest {
    // Each message attribute is strongly typed.
    // You also must assign a "tag" number.
    // Each tag number is unique within the message.
    string name = 1;

    // This defines a strongly typed list of String
    repeated string hobbies = 2;

    // There are many more basics types, like Enum, Map
    // See https://developers.google.com/protocol-buffers/docs/proto3
    // for more information.
}

message HelloResponse {
    string greeting = 1;
}

// Defining a Service, a Service can have multiple RPC operations
service GreetingService {
    // Define a simple RPC operation
    rpc greeting(HelloRequest) returns (HelloResponse);

    // Define a server-side stream RPC operation
    rpc greetingServerStream(HelloRequest) returns (stream HelloResponse);

    // Define a client-side stream RPC operation
    rpc greetingClientStream(stream HelloRequest) returns (HelloResponse);

    // Define a Bi-directional stream RPC operation
    rpc greetingBiStream(stream HelloRequest) returns (stream HelloResponse);
}